--- a/src/connect/connectdialog.ui
+++ b/src/connect/connectdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>543</width>
-    <height>388</height>
+    <height>449</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,87 +22,21 @@
      <property name="verticalSpacing">
       <number>6</number>
      </property>
-     <item row="8" column="0" colspan="2">
-      <widget class="QCheckBox" name="checkBoxConnectFetchAiAircraftFsx">
-       <property name="toolTip">
-        <string>Deselect to disable fetching and transmission of AI or multiplayer aircraft</string>
-       </property>
+     <item row="17" column="0">
+      <widget class="QLabel" name="labelConnectHostname">
        <property name="text">
-        <string>Fetch AI or multiplayer &amp;aircraft</string>
-       </property>
-       <property name="checked">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="17" column="1">
-      <widget class="QComboBox" name="comboBoxConnectHostname">
-       <property name="toolTip">
-        <string>Add the &lt;span style=&quot;color: #0000ff; font-weight:bold&quot;&gt;hostname&lt;/span&gt; or &lt;span style=&quot;color: #0000ff; font-weight:bold&quot;&gt;IP address&lt;/span&gt; that Little Navconnect shows on startup.
-Use your X-Plane computer name if you are running the Little Xpconnect X-Plane plugin.</string>
-       </property>
-       <property name="editable">
-        <bool>true</bool>
-       </property>
-       <property name="currentText">
-        <string/>
-       </property>
-       <property name="maxCount">
-        <number>10</number>
-       </property>
-       <property name="insertPolicy">
-        <enum>QComboBox::InsertAtTop</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="0" colspan="3">
-      <widget class="QRadioButton" name="radioButtonConnectDirectFsx">
-       <property name="toolTip">
-        <string>Connect directly to a FSX or a Prepar3D flight simulator on the same computer using SimConnect.</string>
-       </property>
-       <property name="text">
-        <string>Connect directly to a &amp;local FSX or Prepar3D flight simulator</string>
-       </property>
-       <property name="checked">
-        <bool>true</bool>
-       </property>
-       <attribute name="buttonGroup">
-        <string notr="true">buttonGroupConnectType</string>
-       </attribute>
-      </widget>
-     </item>
-     <item row="18" column="0">
-      <widget class="QLabel" name="labelConnectPort">
-       <property name="text">
-        <string>&amp;Port:</string>
+        <string>&amp;Hostname or IP address:</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="buddy">
-        <cstring>spinBoxConnectPort</cstring>
+        <cstring>comboBoxConnectHostname</cstring>
        </property>
       </widget>
      </item>
-     <item row="17" column="2">
-      <widget class="QPushButton" name="pushButtonConnectDeleteHostname">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="toolTip">
-        <string>Delete the current hostname or IP address from the list.</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="icon">
-        <iconset resource="../../littlenavmap.qrc">
-         <normaloff>:/littlenavmap/resources/icons/cancel.svg</normaloff>:/littlenavmap/resources/icons/cancel.svg</iconset>
-       </property>
-      </widget>
+     <item row="21" column="1">
+      <widget class="QSpinBox" name="spinBoxFlightgearUdpPort"/>
      </item>
      <item row="7" column="1">
       <widget class="QSpinBox" name="spinBoxConnectUpdateRateFsx">
@@ -126,6 +60,59 @@ Lower values will result in a more fluid aircraft movement but can potentially i
        <property name="value">
         <number>500</number>
        </property>
+      </widget>
+     </item>
+     <item row="12" column="1">
+      <widget class="QSpinBox" name="spinBoxConnectUpdateRateXp">
+       <property name="toolTip">
+        <string>Allowed range is 50 milliseconds up to 1 second.
+Little Navmap fetches data from the flight simulator using this time interval.
+Lower values will result in a more fluid aircraft movement but can potentially induce stutters.</string>
+       </property>
+       <property name="suffix">
+        <string> ms</string>
+       </property>
+       <property name="minimum">
+        <number>50</number>
+       </property>
+       <property name="maximum">
+        <number>1000</number>
+       </property>
+       <property name="singleStep">
+        <number>50</number>
+       </property>
+       <property name="value">
+        <number>500</number>
+       </property>
+      </widget>
+     </item>
+     <item row="11" column="0" colspan="3">
+      <widget class="QRadioButton" name="radioButtonConnectDirectXp">
+       <property name="toolTip">
+        <string>Connect directly to X-Plane on the same computer using the Little Xpconnect plugin.</string>
+       </property>
+       <property name="text">
+        <string>Connect directly to a local &amp;X-Plane simulator</string>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+       <attribute name="buttonGroup">
+        <string notr="true">buttonGroupConnectType</string>
+       </attribute>
+      </widget>
+     </item>
+     <item row="16" column="0" colspan="3">
+      <widget class="QRadioButton" name="radioButtonConnectRemote">
+       <property name="toolTip">
+        <string>Connect to FSX, Prepar3D or X-Plane on a remote computer running the Little Navconnect program.</string>
+       </property>
+       <property name="text">
+        <string>Connect to a &amp;remote flight simulator via Little Navconnect</string>
+       </property>
+       <attribute name="buttonGroup">
+        <string notr="true">buttonGroupConnectType</string>
+       </attribute>
       </widget>
      </item>
      <item row="18" column="1">
@@ -158,36 +145,20 @@ Use your X-Plane computer name if you are running the Little Xpconnect X-Plane p
        </property>
       </widget>
      </item>
-     <item row="17" column="0">
-      <widget class="QLabel" name="labelConnectHostname">
+     <item row="20" column="0" colspan="2">
+      <widget class="QRadioButton" name="radioButtonConnectDirectFg">
        <property name="text">
-        <string>&amp;Hostname or IP address:</string>
+        <string>Wait for a connection from FlightGear flight simulator</string>
        </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-       <property name="buddy">
-        <cstring>comboBoxConnectHostname</cstring>
-       </property>
+       <attribute name="buttonGroup">
+        <string notr="true">buttonGroupConnectType</string>
+       </attribute>
       </widget>
      </item>
-     <item row="19" column="0" colspan="3">
-      <widget class="Line" name="lineBottom">
+     <item row="10" column="0" colspan="3">
+      <widget class="Line" name="lineFsxXp">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="0">
-      <widget class="QLabel" name="labelConnectUpdateRateFsx">
-       <property name="text">
-        <string>&amp;Update time interval:</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-       <property name="buddy">
-        <cstring>spinBoxConnectUpdateRateFsx</cstring>
        </property>
       </widget>
      </item>
@@ -204,20 +175,17 @@ Use your X-Plane computer name if you are running the Little Xpconnect X-Plane p
        </property>
       </widget>
      </item>
-     <item row="11" column="0" colspan="3">
-      <widget class="QRadioButton" name="radioButtonConnectDirectXp">
-       <property name="toolTip">
-        <string>Connect directly to X-Plane on the same computer using the Little Xpconnect plugin.</string>
-       </property>
+     <item row="7" column="0">
+      <widget class="QLabel" name="labelConnectUpdateRateFsx">
        <property name="text">
-        <string>Connect directly to a local &amp;X-Plane simulator</string>
+        <string>&amp;Update time interval:</string>
        </property>
-       <property name="checked">
-        <bool>false</bool>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
-       <attribute name="buttonGroup">
-        <string notr="true">buttonGroupConnectType</string>
-       </attribute>
+       <property name="buddy">
+        <cstring>spinBoxConnectUpdateRateFsx</cstring>
+       </property>
       </widget>
      </item>
      <item row="13" column="0" colspan="2">
@@ -233,27 +201,89 @@ Use your X-Plane computer name if you are running the Little Xpconnect X-Plane p
        </property>
       </widget>
      </item>
-     <item row="12" column="1">
-      <widget class="QSpinBox" name="spinBoxConnectUpdateRateXp">
+     <item row="6" column="0" colspan="3">
+      <widget class="QRadioButton" name="radioButtonConnectDirectFsx">
        <property name="toolTip">
-        <string>Allowed range is 50 milliseconds up to 1 second.
-Little Navmap fetches data from the flight simulator using this time interval.
-Lower values will result in a more fluid aircraft movement but can potentially induce stutters.</string>
+        <string>Connect directly to a FSX or a Prepar3D flight simulator on the same computer using SimConnect.</string>
        </property>
-       <property name="suffix">
-        <string> ms</string>
+       <property name="text">
+        <string>Connect directly to a &amp;local FSX or Prepar3D flight simulator</string>
        </property>
-       <property name="minimum">
-        <number>50</number>
+       <property name="checked">
+        <bool>true</bool>
        </property>
-       <property name="maximum">
-        <number>1000</number>
+       <attribute name="buttonGroup">
+        <string notr="true">buttonGroupConnectType</string>
+       </attribute>
+      </widget>
+     </item>
+     <item row="17" column="2">
+      <widget class="QPushButton" name="pushButtonConnectDeleteHostname">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
        </property>
-       <property name="singleStep">
-        <number>50</number>
+       <property name="toolTip">
+        <string>Delete the current hostname or IP address from the list.</string>
        </property>
-       <property name="value">
-        <number>500</number>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../littlenavmap.qrc">
+         <normaloff>:/littlenavmap/resources/icons/cancel.svg</normaloff>:/littlenavmap/resources/icons/cancel.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item row="17" column="1">
+      <widget class="QComboBox" name="comboBoxConnectHostname">
+       <property name="toolTip">
+        <string>Add the &lt;span style=&quot;color: #0000ff; font-weight:bold&quot;&gt;hostname&lt;/span&gt; or &lt;span style=&quot;color: #0000ff; font-weight:bold&quot;&gt;IP address&lt;/span&gt; that Little Navconnect shows on startup.
+Use your X-Plane computer name if you are running the Little Xpconnect X-Plane plugin.</string>
+       </property>
+       <property name="editable">
+        <bool>true</bool>
+       </property>
+       <property name="currentText">
+        <string/>
+       </property>
+       <property name="maxCount">
+        <number>10</number>
+       </property>
+       <property name="insertPolicy">
+        <enum>QComboBox::InsertAtTop</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="18" column="0">
+      <widget class="QLabel" name="labelConnectPort">
+       <property name="text">
+        <string>&amp;Port:</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+       <property name="buddy">
+        <cstring>spinBoxConnectPort</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="24" column="0" colspan="3">
+      <widget class="Line" name="lineBottom">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="21" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Port:</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
@@ -264,21 +294,21 @@ Lower values will result in a more fluid aircraft movement but can potentially i
        </property>
       </widget>
      </item>
-     <item row="16" column="0" colspan="3">
-      <widget class="QRadioButton" name="radioButtonConnectRemote">
+     <item row="8" column="0" colspan="2">
+      <widget class="QCheckBox" name="checkBoxConnectFetchAiAircraftFsx">
        <property name="toolTip">
-        <string>Connect to FSX, Prepar3D or X-Plane on a remote computer running the Little Navconnect program.</string>
+        <string>Deselect to disable fetching and transmission of AI or multiplayer aircraft</string>
        </property>
        <property name="text">
-        <string>Connect to a &amp;remote flight simulator via Little Navconnect</string>
+        <string>Fetch AI or multiplayer &amp;aircraft</string>
        </property>
-       <attribute name="buttonGroup">
-        <string notr="true">buttonGroupConnectType</string>
-       </attribute>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
-     <item row="10" column="0" colspan="3">
-      <widget class="Line" name="lineFsxXp">
+     <item row="19" column="0" colspan="3">
+      <widget class="Line" name="lineFgRemote">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
