--- a/src/connect/connectdialog.ui
+++ b/src/connect/connectdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>413</width>
-    <height>366</height>
+    <width>460</width>
+    <height>446</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,40 +25,35 @@
      <property name="verticalSpacing">
       <number>2</number>
      </property>
-     <item row="12" column="1">
-      <widget class="QLabel" name="labelConnectUpdateRateXp">
+     <item row="11" column="0" colspan="4">
+      <widget class="QRadioButton" name="radioButtonConnectDirectXp">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="toolTip">
+        <string>Connect directly to X-Plane on the same computer using the Little Xpconnect plugin.</string>
+       </property>
        <property name="text">
-        <string>&amp;Update time interval:</string>
+        <string>Connect directly to a local &amp;X-Plane simulator</string>
        </property>
-       <property name="buddy">
-        <cstring>spinBoxConnectUpdateRateFsx</cstring>
+       <property name="checked">
+        <bool>false</bool>
        </property>
+       <attribute name="buttonGroup">
+        <string notr="true">buttonGroupConnectType</string>
+       </attribute>
       </widget>
      </item>
-     <item row="19" column="1">
-      <widget class="QLabel" name="labelConnectPort">
+     <item row="18" column="1">
+      <widget class="QLabel" name="labelConnectHostname">
        <property name="text">
-        <string>&amp;Port:</string>
+        <string>&amp;Hostname or IP address:</string>
        </property>
        <property name="buddy">
-        <cstring>spinBoxConnectPort</cstring>
-       </property>
-      </widget>
-     </item>
-     <item row="20" column="0" colspan="4">
-      <widget class="Line" name="lineBottom">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="1">
-      <widget class="QLabel" name="labelConnectUpdateRateFsx">
-       <property name="text">
-        <string>&amp;Update time interval:</string>
-       </property>
-       <property name="buddy">
-        <cstring>spinBoxConnectUpdateRateFsx</cstring>
+        <cstring>comboBoxConnectHostname</cstring>
        </property>
       </widget>
      </item>
@@ -76,13 +71,6 @@ Use your X-Plane computer name if you are running the Little Xpconnect X-Plane p
        </property>
        <property name="value">
         <number>51968</number>
-       </property>
-      </widget>
-     </item>
-     <item row="10" column="0" colspan="4">
-      <widget class="Line" name="lineFsxXp">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
@@ -110,53 +98,31 @@ Lower values will result in a more fluid aircraft movement but can potentially i
        </property>
       </widget>
      </item>
-     <item row="18" column="3">
-      <widget class="QPushButton" name="pushButtonConnectDeleteHostname">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
+     <item row="16" column="0" colspan="4">
+      <widget class="Line" name="lineXpRemote">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
        </property>
+      </widget>
+     </item>
+     <item row="18" column="2">
+      <widget class="QComboBox" name="comboBoxConnectHostname">
        <property name="toolTip">
-        <string>Delete the current hostname or IP address from the list.</string>
+        <string>Add the &lt;span style=&quot;color: #0000ff; font-weight:bold&quot;&gt;hostname&lt;/span&gt; or &lt;span style=&quot;color: #0000ff; font-weight:bold&quot;&gt;IP address&lt;/span&gt; that Little Navconnect shows on startup.
+Use your X-Plane computer name if you are running the Little Xpconnect X-Plane plugin.</string>
        </property>
-       <property name="text">
+       <property name="editable">
+        <bool>true</bool>
+       </property>
+       <property name="currentText">
         <string/>
        </property>
-       <property name="icon">
-        <iconset resource="../../littlenavmap.qrc">
-         <normaloff>:/littlenavmap/resources/icons/cancel.svg</normaloff>:/littlenavmap/resources/icons/cancel.svg</iconset>
+       <property name="maxCount">
+        <number>10</number>
        </property>
-      </widget>
-     </item>
-     <item row="18" column="1">
-      <widget class="QLabel" name="labelConnectHostname">
-       <property name="text">
-        <string>&amp;Hostname or IP address:</string>
+       <property name="insertPolicy">
+        <enum>QComboBox::InsertAtTop</enum>
        </property>
-       <property name="buddy">
-        <cstring>comboBoxConnectHostname</cstring>
-       </property>
-      </widget>
-     </item>
-     <item row="17" column="0" colspan="4">
-      <widget class="QRadioButton" name="radioButtonConnectRemote">
-       <property name="font">
-        <font>
-         <weight>75</weight>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="toolTip">
-        <string>Connect to FSX, Prepar3D or X-Plane on a remote computer running the Little Navconnect program.</string>
-       </property>
-       <property name="text">
-        <string>Connect to a &amp;remote flight simulator via Little Navconnect</string>
-       </property>
-       <attribute name="buttonGroup">
-        <string notr="true">buttonGroupConnectType</string>
-       </attribute>
       </widget>
      </item>
      <item row="6" column="0" colspan="4">
@@ -181,50 +147,45 @@ Lower values will result in a more fluid aircraft movement but can potentially i
        </attribute>
       </widget>
      </item>
-     <item row="18" column="2">
-      <widget class="QComboBox" name="comboBoxConnectHostname">
+     <item row="8" column="1" colspan="3">
+      <widget class="QCheckBox" name="checkBoxConnectFetchAiAircraftFsx">
        <property name="toolTip">
-        <string>Add the &lt;span style=&quot;color: #0000ff; font-weight:bold&quot;&gt;hostname&lt;/span&gt; or &lt;span style=&quot;color: #0000ff; font-weight:bold&quot;&gt;IP address&lt;/span&gt; that Little Navconnect shows on startup.
-Use your X-Plane computer name if you are running the Little Xpconnect X-Plane plugin.</string>
-       </property>
-       <property name="editable">
-        <bool>true</bool>
-       </property>
-       <property name="currentText">
-        <string/>
-       </property>
-       <property name="maxCount">
-        <number>10</number>
-       </property>
-       <property name="insertPolicy">
-        <enum>QComboBox::InsertAtTop</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="11" column="0" colspan="4">
-      <widget class="QRadioButton" name="radioButtonConnectDirectXp">
-       <property name="font">
-        <font>
-         <weight>75</weight>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="toolTip">
-        <string>Connect directly to X-Plane on the same computer using the Little Xpconnect plugin.</string>
+        <string>Deselect to disable fetching and transmission of AI or multiplayer aircraft</string>
        </property>
        <property name="text">
-        <string>Connect directly to a local &amp;X-Plane simulator</string>
+        <string>Fetch AI or multiplayer &amp;aircraft</string>
        </property>
        <property name="checked">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
-       <attribute name="buttonGroup">
-        <string notr="true">buttonGroupConnectType</string>
-       </attribute>
       </widget>
      </item>
-     <item row="9" column="1" colspan="3">
-      <widget class="QCheckBox" name="checkBoxConnectFetchAiShipFsx">
+     <item row="7" column="1">
+      <widget class="QLabel" name="labelConnectUpdateRateFsx">
+       <property name="text">
+        <string>&amp;Update time interval:</string>
+       </property>
+       <property name="buddy">
+        <cstring>spinBoxConnectUpdateRateFsx</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="10" column="0" colspan="4">
+      <widget class="Line" name="lineFsxXp">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="23" column="1">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Port:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="14" column="1" colspan="3">
+      <widget class="QCheckBox" name="checkBoxConnectFetchAiShipXp">
        <property name="toolTip">
         <string>Deselect to disable fetching and transmission of AI or multiplayer ships</string>
        </property>
@@ -236,11 +197,23 @@ Use your X-Plane computer name if you are running the Little Xpconnect X-Plane p
        </property>
       </widget>
      </item>
-     <item row="16" column="0" colspan="4">
-      <widget class="Line" name="lineXpRemote">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+     <item row="21" column="0" colspan="3">
+      <widget class="QRadioButton" name="radioButtonConnectDirectFg">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
        </property>
+       <property name="toolTip">
+        <string>Wait for connection from FlightGear simulator</string>
+       </property>
+       <property name="text">
+        <string>Allow connection from a remote/local FlightGear simulator</string>
+       </property>
+       <attribute name="buttonGroup">
+        <string notr="true">buttonGroupConnectType</string>
+       </attribute>
       </widget>
      </item>
      <item row="12" column="2">
@@ -267,16 +240,82 @@ Lower values will result in a more fluid aircraft movement but can potentially i
        </property>
       </widget>
      </item>
-     <item row="8" column="1" colspan="3">
-      <widget class="QCheckBox" name="checkBoxConnectFetchAiAircraftFsx">
+     <item row="19" column="1">
+      <widget class="QLabel" name="labelConnectPort">
+       <property name="text">
+        <string>&amp;Port:</string>
+       </property>
+       <property name="buddy">
+        <cstring>spinBoxConnectPort</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="23" column="2">
+      <widget class="QSpinBox" name="spinBoxFlightgearUdpPort">
+       <property name="maximum">
+        <number>65535</number>
+       </property>
+       <property name="value">
+        <number>15055</number>
+       </property>
+      </widget>
+     </item>
+     <item row="25" column="0" colspan="4">
+      <widget class="Line" name="lineBottom">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="1" colspan="3">
+      <widget class="QCheckBox" name="checkBoxConnectFetchAiShipFsx">
        <property name="toolTip">
-        <string>Deselect to disable fetching and transmission of AI or multiplayer aircraft</string>
+        <string>Deselect to disable fetching and transmission of AI or multiplayer ships</string>
        </property>
        <property name="text">
-        <string>Fetch AI or multiplayer &amp;aircraft</string>
+        <string>Fetch AI or multiplayer &amp;ships</string>
        </property>
        <property name="checked">
         <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="17" column="0" colspan="4">
+      <widget class="QRadioButton" name="radioButtonConnectRemote">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="toolTip">
+        <string>Connect to FSX, Prepar3D or X-Plane on a remote computer running the Little Navconnect program.</string>
+       </property>
+       <property name="text">
+        <string>Connect to a &amp;remote flight simulator via Little Navconnect</string>
+       </property>
+       <attribute name="buttonGroup">
+        <string notr="true">buttonGroupConnectType</string>
+       </attribute>
+      </widget>
+     </item>
+     <item row="18" column="3">
+      <widget class="QPushButton" name="pushButtonConnectDeleteHostname">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="toolTip">
+        <string>Delete the current hostname or IP address from the list.</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../littlenavmap.qrc">
+         <normaloff>:/littlenavmap/resources/icons/cancel.svg</normaloff>:/littlenavmap/resources/icons/cancel.svg</iconset>
        </property>
       </widget>
      </item>
@@ -293,16 +332,30 @@ Lower values will result in a more fluid aircraft movement but can potentially i
        </property>
       </widget>
      </item>
-     <item row="14" column="1" colspan="3">
-      <widget class="QCheckBox" name="checkBoxConnectFetchAiShipXp">
-       <property name="toolTip">
-        <string>Deselect to disable fetching and transmission of AI or multiplayer ships</string>
-       </property>
+     <item row="12" column="1">
+      <widget class="QLabel" name="labelConnectUpdateRateXp">
        <property name="text">
-        <string>Fetch AI or multiplayer &amp;ships</string>
+        <string>&amp;Update time interval:</string>
+       </property>
+       <property name="buddy">
+        <cstring>spinBoxConnectUpdateRateFsx</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="24" column="1" colspan="3">
+      <widget class="QCheckBox" name="checkBoxConnectFetchAiAircraftFg">
+       <property name="text">
+        <string>Fetch AI or multiplayer aircraft</string>
        </property>
        <property name="checked">
         <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="20" column="0" colspan="4">
+      <widget class="Line" name="lineFg">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
@@ -323,7 +376,7 @@ Unchecking this will stop all automatic connection attempts immediately.</string
      </property>
     </widget>
    </item>
-   <item alignment="Qt::AlignBottom">
+   <item>
     <widget class="QDialogButtonBox" name="buttonBoxConnect">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
